@@ -76,7 +76,6 @@ public final class GameEngineImpl implements GameEngine {
         long lastTime;
         while (status.equals(GameStatus.RUNNING)) {
             lastTime = System.currentTimeMillis();
-
             this.update(delta);
             this.redraw();
             delta = updateDeltaTime(lastTime, drawInterval);
@@ -119,10 +118,10 @@ public final class GameEngineImpl implements GameEngine {
         final var player = model.getPlayer();
         if (!Objects.isNull(cmd)) {
             cmd.execute(player);
-            player.update(delta);
-            model.setPlayer(player);
-            this.mainController.setModel(model);
         }
+        player.update(delta);
+        model.setPlayer(player);
+        this.mainController.setModel(model);
     }
 
     /**
@@ -139,7 +138,7 @@ public final class GameEngineImpl implements GameEngine {
     @Override
     public void forceStart() {
         this.status = GameStatus.RUNNING;
-        Thread.ofPlatform().daemon().start(this::mainLoop);
+        new Thread(this::mainLoop, "GameLoopThread").start();
     }
 
     @Override
